@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Oxref V 1.00.04</title>
+<title>Oxref V 1.00.05</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
@@ -10,11 +10,11 @@
 <link rev="made" href="mailto:f.b.brokken@rug.nl">
 </head>
 <body>
-<hr>
-<h1>Oxref V 1.00.04</h1>
-<h2>Frank B. Brokken (f.b.brokken@rug.nl)<br></h2>
+<hr/>
+<h1 id="title">Oxref V 1.00.05</h1>
+<h2 id="author">Frank B. Brokken (f.b.brokken@rug.nl)<br/></h2>
 
-<h2>Center for Information Technology, University of Groningen</h2><h2>2012-2015</h2>
+<h2 id="affiliation">Center for Information Technology, University of Groningen</h2><h2 id="date">2012-2015</h2>
 
 
 <p>
@@ -33,6 +33,8 @@ by its tag or download the matching <code>.zip</code> or <code>.tar.gz</code> fr
 release page):
 <p>
 <ul>
+        <li> <a href="https://github.com/fbb-git/oxref/releases/tag/1.00.05">1.00.05</a>
+Dec 14, 2015;
         <li> <a href="https://github.com/fbb-git/oxref/releases/tag/1.00.04">1.00.04</a>
 Oct  6, 2015;
         <li> <a href="https://github.com/fbb-git/oxref/releases/tag/1.00.03">1.00.03</a>
@@ -40,9 +42,7 @@ Oct  3, 2015;
         <li> <a href="https://github.com/fbb-git/oxref/releases/tag/1.00.02">1.00.02</a>
 Feb 12, 2015;
         <li> <a href="https://github.com/fbb-git/oxref/releases/tag/0.91.00">0.91.00</a>
-Jan 25, 2013;
-        <li> <a href="https://github.com/fbb-git/oxref/releases/tag/0.90.10">0.90.10</a>
-May 12, 2012.
+Jan 25, 2013.
         </ul>
     
 <p>
