@@ -1,3 +1,9 @@
+oxref (1.00.05)
+
+  * Updated the icmake build scripts to icmake 8.00.04
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 14 Dec 2015 14:18:32 +0100
+
 oxref (1.00.04)
 
   * Kevin Brodsky observed that the installation scripts used 'chdir' rather
